--- a/slope_estimation/package.xml
+++ b/slope_estimation/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>ros_slope_estimation</name>
+  <name>slope_estimation</name>
   <version>0.0.1</version>
   <description>Estimates the slope.</description>
   <maintainer email="polzin.max@gmail.com">ROSbloX</maintainer>
